# fin

./: .gitignore  LICENSE  NOTICE  README.md
data/raw/vintage=2026-01/: SHA256SUMS  finflows_timeseries.xlsx
docs/: DATASETS.md  Finance-Portfolio-Brief.docx
docs/briefs/: 01-post-covid-sector-rotation.md  02-luxury-goods.md  03-fortune-500.md  04-cloud-ai-security.md  05-damodaran-industry-value-chain.md
projects/05-industry-value-chain/: Makefile  README.md  pyproject.toml  requirements.txt
projects/05-industry-value-chain/analysis/: headline.json
projects/05-industry-value-chain/dashboard/: app.py
projects/05-industry-value-chain/data/: industry_aliases.csv
projects/05-industry-value-chain/docs/: SCHEMA.md  SUPABASE.md  data_dictionary.md
projects/05-industry-value-chain/sql/postgres/: 01_schema.sql  02_seed.sql  03_mart_view.sql  04_rls.sql
projects/05-industry-value-chain/sql/postgres/csv/: dim_industry.csv  dim_region.csv  dim_vintage.csv  fact_dividends_fcfe.csv  fact_financing_flows.csv  fact_growth_fundamental_eb.csv  fact_industry_firmcount.csv  fact_margins.csv  fact_multiples_pe.csv  fact_multiples_ps.csv  fact_rnd.csv  map_industry_alias.csv
projects/05-industry-value-chain/src/: __init__.py  analysis.py  config.py  crosswalk.py  export_postgres.py  ingest.py  parse.py  quality.py  warehouse.py
projects/05-industry-value-chain/tests/: conftest.py  test_analysis.py  test_crosswalk.py  test_parse.py  test_reconcile.py
